fixing mobile issue with scrollbar

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -5,6 +5,10 @@ body {
     padding: 0px;
 }
 
+.noscrollbar::-webkit-scrollbar { 
+    display: none; 
+}
+
 #app {
     margin-bottom: 50px;
 }
